<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/team1Layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvTeam1Title"
            style="@style/team_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/team1_title" />

        <ImageButton
            android:id="@+id/btnTeam1Decrease"
            style="@style/MinusScoreButton"
            android:contentDescription="@string/team1_decrease_description"
            android:onClick="decreaseScoreTeam1" />

        <TextView
            android:id="@+id/tvTeam1Score"
            style="@style/ScoreText"
            android:text="@string/initial_score" />

        <ImageButton
            android:id="@+id/btnTeam1Increase"
            style="@style/PlusScoreButton"
            android:contentDescription="@string/team1_increase_description"
            android:onClick="increaseScoreTeam1" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/team2Layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvTeam2Title"
            style="@style/team_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/team2_title" />

        <ImageButton
            android:id="@+id/btnTeam2Decrease"
            style="@style/MinusScoreButton"
            android:contentDescription="@string/team2_decrease_description"
            android:onClick="decreaseScoreTeam2"
            android:text="@string/btn_decrease" />

        <TextView
            android:id="@+id/tvTeam2Score"
            style="@style/ScoreText"
            android:text="@string/initial_score" />

        <ImageButton
            android:id="@+id/btnTeam2Increase"
            style="@style/PlusScoreButton"
            android:contentDescription="@string/team2_increase_description"
            android:onClick="increaseScoreTeam2"
            android:text="@string/btn_increase" />

    </RelativeLayout>

</LinearLayout>